fix: Adding z-index to portrait-hud parent element

--- a/styles/PortraitHUD.css
+++ b/styles/PortraitHUD.css
@@ -14,6 +14,7 @@
     position: relative;
     transition: all 0.3s ease-in-out;
     pointer-events: all;
+    z-index: 1;
 }
 
 .portrait-hud-image{
